--- a/package.json
+++ b/package.json
@@ -1,24 +1,39 @@
 {
   "name": "e-souk",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "ts:check": "tsc"
+    "web": "expo start --web"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "clsx": "^2.1.0",
     "expo": "~50.0.14",
+    "expo-constants": "~15.4.5",
+    "expo-font": "~11.10.3",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-hook-form": "^7.51.3",
+    "react-native": "0.73.6",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.0.3",
+    "tailwind-merge": "^2.2.2",
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native-vector-icons": "^6.4.18",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
   },
