--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "expo": "~50.0.14",
     "expo-constants": "~15.4.5",
@@ -26,6 +28,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.0.3",
+    "react-redux": "^9.1.0",
     "tailwind-merge": "^2.2.2",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
