add logout page and fix cart page

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-EXPO_PUBLIC_API_URL=http://192.168.11.116:3000/api/628305c1-cf61-437f-9b53-f8bfa2826527
+EXPO_PUBLIC_API_URL=https://b4d6-102-96-69-144.ngrok-free.app
