--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-EXPO_PUBLIC_API_URL=http://192.168.1.173:8080
+DATABASE_URL="mysql://root:@localhost:3306/store"
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_cnVsaW5nLXRlYWwtOTAuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_NtN9gipFZR2j3G0OklTdQsEmEiHpELDGU0KmBessgX
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
